# backtrader

./: .editorconfig  .flake8  .pre-commit-config.yaml  .travis.yml  pyproject.toml  setup.py
.github/: FUNDING.yml
backtrader/: dataseries.py  feed.py  lineiterator.py
backtrader/feeds/: btcsv.py  pandafeed.py
tests/: test_dataseries.py
